# sandbox-artifact-detector

./: LICENSE  README.md
env-artifacts/: .gitignore  CMakeLists.txt
env-artifacts/include/: agent.h  bios.h  checks.h  compare.h  cpuid_check.h  debugger_checks.h  driver_detect.h  interactive.h  mac_oui.h  patchgen.h  profiles.h  registry_fs.h  remediate.h  rollback.h  runtime_info.h  timing.h  tips.h  ui.h  vmware_backdoor.h
env-artifacts/logs/: detector_2025-10-23_14-39-18.json  detector_2025-11-13_18-59-22.json  detector_2025-11-24_21-47-45.json  detector_2025-11-24_23-23-30.json  detector_2025-11-24_23-33-58.json  detector_2025-11-25_00-13-31.json  detector_2025-11-26_01-30-11.json  detector_2025-11-26_15-27-08.json  detector_2025-11-26_23-16-21.json  detector_2025-11-28_22-38-44.json  detector_2025-12-16_10-29-44.json  detector_2025-12-16_10-47-26.json  detector_2025-12-16_11-08-43.json  detector_2025-12-16_11-10-24.json  detector_2025-12-16_11-11-58.json  detector_2026-01-28_21-41-58.json  detector_2026-01-31_19-03-47.json  detector_2026-01-31_21-35-42.json  detector_2026-01-31_21-46-50.json  detector_2026-01-31_22-00-24.json  detector_2026-02-01_15-05-28.json  detector_2026-02-01_15-15-36.json  detector_2026-02-01_15-25-33.json  detector_2026-02-01_15-27-25.json  detector_2026-02-01_15-33-42.json  detector_2026-02-01_15-35-10.json  detector_2026-02-01_17-29-36.json  detector_2026-02-19_14-02-40.json  detector_2026-02-19_14-13-51.json  detector_2026-02-19_14-27-01.json  detector_2026-02-19_15-21-42.json  detector_2026-02-19_21-19-40.json  (+30 more)
(+34 files in other folders)
